# pymylib

./: .env.sample  .gitignore  pyproject.toml
src/mylib/: __init__.py  com.py  env_loader.py  logger.py
tests/: test_env.py  test_logger.py
