[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mylib"         # パッケージ名
version = "0.1.0"
description = "okitomo's library"
authors = [{ name = "okitomo" }]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9"
]

[tool.setuptools.packages.find]
where = ["src"]
